--- a/regressão/templates/index.html
+++ b/regressão/templates/index.html
@@ -19,6 +19,7 @@
         <div class="mt-4">
             <h4>Dataset Utilizado</h4>
             <p>O arquivo de dados deve estar no formato CSV com o nome <code>dados.csv</code>.</p>
+            <a class="button-upload-csv" href="arquivo-upload">Adicione seu arquivo para a análise</a>
         </div>
     </div>
 </div>
