--- a/regressão/templates/base.html
+++ b/regressão/templates/base.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
+        <div id="container-navbar-analisederegressao">
             <a class="navbar-brand" href="{{ url_for('index') }}">Análise de Regressão</a>
         </div>
     </nav>
