--- a/regressão/templates/resultados.html
+++ b/regressão/templates/resultados.html
@@ -8,7 +8,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 90%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.9);
     z-index: 1000;
@@ -16,15 +16,20 @@
     overflow: auto;
 }
 
+
 .image-viewer img {
-    max-width: 90%;
-    max-height: 90%;
+    max-width: 100%;
+    max-height: 100%;
     margin: auto;
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
+}
+
+.col-12 {
+    text-align: center;
 }
 
 .close-viewer {
@@ -202,11 +207,13 @@
             </div>
             <div class="card-body text-center">
                 <img src="{{ url_for('static', filename=plots.correlacao) }}" 
-                     alt="Matriz de Correlação" 
+                     alt="Matriz de Correlação"
+                     id="graph-correlacao" 
                      class="img-fluid rounded graph-thumbnail">
             </div>
         </div>
     </div>
+
     
     <div class="col-md-6">
         <div class="card mb-4">
@@ -235,7 +242,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="col-md-6">
         <div class="card mb-4">
             <div class="card-header bg-primary text-white">
@@ -248,6 +255,7 @@
             </div>
         </div>
     </div>
+    
 </div>
 
 <div class="row">
