--- a/regressão/templates/base.html
+++ b/regressão/templates/base.html
@@ -19,7 +19,7 @@
     
     <footer class="mt-5 py-3 bg-light">
         <div class="container text-center">
-            <p class="mb-0">Análise de Regressão - &copy; 2023</p>
+            <p class="mb-0">Análise de Regressão- Projeto Integrador UNIVESP - &copy; 2025</p>
         </div>
     </footer>
     
